[package]
name = "blog_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.23" # bootimage does not work past this version due to change in cargo metadata
volatile = "0.2.6"
spin = "0.5.2"
once_cell = {version="1.16.0", default-features=false, features = ["critical-section"]}
critical-section = {version="1.1.1", features=["restore-state-bool"]}
